If Viewport shading is 'Rendered', B3D crashes after browsing to file for texture node and connecting to any shader node. #40800

Closed
opened 2014-06-25 07:31:03 +02:00 by Joel Godin · 10 comments

System Information
OSX 10.9.3
AMD Radeon HD 6770M 512MB
see pic for more system details

Blender Version
Broken: 2.71 Hash ead83a4 (6-20-14)
Worked: 2.70 Hash e53c00a (6-11-14)

Short description of error

Exact steps for others to reproduce the error

  1. Select default cube.
  2. Set 3D viewport to 'Rendered'
  3. Open node editor > add material
  4. Add Image Texture node
  5. Click to open image
  6. Goto to file browser (opening a pre-opened image does not cause problems)
  7. Select image (small or large jpg, don't matter) (I've attached an image I used)
  8. Connect output of image texture node to material shader = Crash (see .txt file of crash dump)

Screenshot_of_System_Information_(2-17-14,_6:53:44_AM).png

BugDump.txt

bug_connect_Image_Texture.blend

Concrete.jpg

**System Information** OSX 10.9.3 AMD Radeon HD 6770M 512MB see pic for more system details **Blender Version** Broken: 2.71 Hash ead83a4 (6-20-14) Worked: 2.70 Hash e53c00a (6-11-14) **Short description of error** **Exact steps for others to reproduce the error** 1) Select default cube. 2) Set 3D viewport to 'Rendered' 3) Open node editor > add material 4) Add Image Texture node 5) Click to open image 6) Goto to file browser (opening a pre-opened image does not cause problems) 7) Select image (small or large jpg, don't matter) (I've attached an image I used) 8) Connect output of image texture node to material shader = Crash (see .txt file of crash dump) ![Screenshot_of_System_Information_(2-17-14,_6:53:44_AM).png](https://archive.blender.org/developer/F95502/Screenshot_of_System_Information__2-17-14__6_53_44_AM_.png) [BugDump.txt](https://archive.blender.org/developer/F95504/BugDump.txt) [bug_connect_Image_Texture.blend](https://archive.blender.org/developer/F95505/bug_connect_Image_Texture.blend) ![Concrete.jpg](https://archive.blender.org/developer/F95506/Concrete.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @joel.godin

Added subscriber: @joel.godin

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Tested d411e1548c
Cant redo this bug, here are the steps I did (incase I miss something)

  • Open bug_connect_Image_Texture.blend
  • Shift+Z in the viewport
  • Press Open in Image Texture and select Concrete.jpg
  • Connect Image Texture to Diffuse BSDF Color socket.
  • Cube turns darker, no crash
Tested d411e1548c Cant redo this bug, here are the steps I did (incase I miss something) - Open `bug_connect_Image_Texture.blend` - `Shift+Z` in the viewport - Press Open in **Image Texture** and select `Concrete.jpg` - Connect **Image Texture** to **Diffuse BSDF** Color socket. - *Cube turns darker, no crash*

Edit, managed to redo crash, only in release build, and only if I do these actions quickly.

Edit, managed to redo crash, only in release build, and only if I do these actions quickly.
Sergey Sharybin self-assigned this 2014-06-25 10:11:57 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Managed to re-do in the debug build. Backtraces goes to OSL, but guess it's some race condition caused by previous scene prepare not being fully finished when doing updated scene update. Looking into it.

Managed to re-do in the debug build. Backtraces goes to OSL, but guess it's some race condition caused by previous scene prepare not being fully finished when doing updated scene update. Looking into it.

This issue was referenced by da64e8ae05

This issue was referenced by da64e8ae0551b85760855b5b5bdfdb2673985223

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit da64e8ae05.

Closed by commit da64e8ae05.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40800
No description provided.